--- a/display-exercise.html
+++ b/display-exercise.html
@@ -16,7 +16,16 @@
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <main>
+    <div class='container'>
+      <div class='row top green'></div>
+      <div class='row top blue'></div>
+    <div>
+    <div>
+      <div class='row bottom grey'></div>
+      <div class='row bottom black'></div>
+      <div class='row bottom orange'></div>
+    </div>  
+  </main>
 </body>
 </html>
